--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.447.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.14",
     "next-startup": "file:",
     "next-themes": "^0.3.0",
